--- a/Aplicativo_Corp_InterCable/Aplicativo_Corp_InterCable.csproj
+++ b/Aplicativo_Corp_InterCable/Aplicativo_Corp_InterCable.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,11 +53,24 @@
     <Compile Include="AgregarCliente.Designer.cs">
       <DependentUpon>AgregarCliente.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="ConectorBD.cs" />
+    <Compile Include="FormPlanes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormPlanes.Designer.cs">
+      <DependentUpon>FormPlanes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GenerarRecib.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenerarRecib.Designer.cs">
+      <DependentUpon>GenerarRecib.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
@@ -69,8 +83,14 @@
     <EmbeddedResource Include="AgregarCliente.resx">
       <DependentUpon>AgregarCliente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormPlanes.resx">
+      <DependentUpon>FormPlanes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GenerarRecib.resx">
+      <DependentUpon>GenerarRecib.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
