--- a/Aplicativo_Corp_InterCable/Aplicativo_Corp_InterCable.csproj
+++ b/Aplicativo_Corp_InterCable/Aplicativo_Corp_InterCable.csproj
@@ -53,6 +53,12 @@
     <Compile Include="AgregarCliente.Designer.cs">
       <DependentUpon>AgregarCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgregarServicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AgregarServicio.Designer.cs">
+      <DependentUpon>AgregarServicio.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConectorBD.cs" />
     <Compile Include="DispositivosONU.cs">
       <SubType>Form</SubType>
@@ -66,23 +72,11 @@
     <Compile Include="FormPlanes.Designer.cs">
       <DependentUpon>FormPlanes.cs</DependentUpon>
     </Compile>
-    <Compile Include="GenerarRecib.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarRecib.Designer.cs">
-      <DependentUpon>GenerarRecib.cs</DependentUpon>
-    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
-    </Compile>
-    <Compile Include="NuevoServicio.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="NuevoServicio.Designer.cs">
-      <DependentUpon>NuevoServicio.cs</DependentUpon>
     </Compile>
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
@@ -92,8 +86,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Servicios.Designer.cs">
+      <DependentUpon>Servicios.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AgregarCliente.resx">
       <DependentUpon>AgregarCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgregarServicio.resx">
+      <DependentUpon>AgregarServicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DispositivosONU.resx">
       <DependentUpon>DispositivosONU.cs</DependentUpon>
@@ -101,14 +104,8 @@
     <EmbeddedResource Include="FormPlanes.resx">
       <DependentUpon>FormPlanes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GenerarRecib.resx">
-      <DependentUpon>GenerarRecib.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="NuevoServicio.resx">
-      <DependentUpon>NuevoServicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
@@ -122,6 +119,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Servicios.resx">
+      <DependentUpon>Servicios.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
